--- a/css/master.css
+++ b/css/master.css
@@ -2,5 +2,42 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
+
+}
+
+/* clearfix */
+.container::after {
+  content: "";
+  display: table;
+  clear: both;
+
+}
+
+.section-left{
+  float: left;
+  width: 20%;
+  min-height: 300px;
+  background-color: blue;
+  position: fixed;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.section-right{
+  float: left;
+  width: 80%;
+  min-height: 300px;
+  background-color: red;
+}
+
+/* sezione sinistra */
+
+.headbar-left{
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  background-color: lightgrey;
+  z-index: 99;
+
+
 }
