--- a/css/master.css
+++ b/css/master.css
@@ -5,6 +5,10 @@
 
 }
 
+a i {
+  color: grey;
+}
+
 /* clearfix */
 .container::after {
   content: "";
@@ -16,28 +20,50 @@
 .section-left{
   float: left;
   width: 20%;
-  min-height: 300px;
+  height: 100vh;
   background-color: blue;
-  position: fixed;
   display:flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+
+
 }
 .section-right{
   float: left;
   width: 80%;
-  min-height: 300px;
+  min-height: 100vh;
   background-color: red;
 }
 
 /* sezione sinistra */
 
 .headbar-left{
-  position: fixed;
   width: 100%;
   height: 50px;
   background-color: lightgrey;
-  z-index: 99;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 
 
+}
+
+.cerca {
+  height: 30px;
+  width: 100%;
+  background-color: lightgrey;
+  border-top: 1px grey solid;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.cerca i{
+  color: grey;
+  /* background-color: white; */
+}
+
+.cerca input {
+  width: 100%;
 }
