--- a/css/master.css
+++ b/css/master.css
@@ -19,9 +19,9 @@ a i {
 
 .section-left{
   float: left;
-  width: 20%;
+  width: 25%;
   height: 100vh;
-  background-color: blue;
+  /* background-color: blue; */
   display:flex;
   flex-direction: column;
 
@@ -29,13 +29,14 @@ a i {
 }
 .section-right{
   float: left;
-  width: 80%;
+  width: 75%;
   min-height: 100vh;
   background-color: red;
 }
 
 /* sezione sinistra */
 
+/* headbar user */
 .headbar-left{
   width: 100%;
   height: 50px;
@@ -45,9 +46,17 @@ a i {
   justify-content: space-between;
   align-items: center;
 
-
 }
 
+.headbar-photo-left {
+  padding-left: 10px;
+}
+
+.headbar-icons-right i {
+  padding-right: 10px;
+}
+
+/* searchbar input */
 .cerca {
   height: 30px;
   width: 100%;
@@ -66,4 +75,21 @@ a i {
 
 .cerca input {
   width: 100%;
+}
+
+/* friend box */
+.friends {
+  min-height: 50px;
+  background-color: white;
+  border-top: 1px solid grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.friends h5{
+  color: lightgrey;
 }
