--- a/css/master.css
+++ b/css/master.css
@@ -93,3 +93,17 @@ a i {
 .friends h5{
   color: lightgrey;
 }
+
+/* sezione destra */
+
+/* headbar right */
+.headbar-right {
+  width: 100%;
+  height: 50px;
+  background-color: lightgrey;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+}
