--- a/css/master.css
+++ b/css/master.css
@@ -31,7 +31,7 @@ a i {
   float: left;
   width: 75%;
   min-height: 100vh;
-  background-color: red;
+  /* background-color: red; */
 }
 
 /* sezione sinistra */
@@ -106,4 +106,43 @@ a i {
   justify-content: space-between;
   align-items: center;
 
+}
+
+.headbar-photo-left {
+  display: flex;
+  flex-direction: row;
+
+}
+.name-details{
+  padding-left: 20px;
+}
+.name-details h5 {
+  color: grey;
+}
+
+.chat-room {
+  width: 100%;
+  height: 85vh;
+  background-image: url(../img/backgroundwhatsapp.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bot-bar {
+  height: 50px;
+  width: 100%;
+  background-color: lightgrey;
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bot-bar input {
+  width: 95%;
+  height: 35px;
+
+}
+
+.bot-bar i {
+  color: grey;
 }
