--- a/css/master.css
+++ b/css/master.css
@@ -97,6 +97,8 @@ a i {
 /* sezione destra */
 
 /* headbar right */
+
+/* da riguardare allineamento foto e dettagli */
 .headbar-right {
   width: 100%;
   height: 50px;
@@ -120,13 +122,26 @@ a i {
   color: grey;
 }
 
+/* chat room */
 .chat-room {
   width: 100%;
   height: 85vh;
   background-image: url(../img/backgroundwhatsapp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  justify-content: space-between;
 }
+
+.chat-user {
+  /* display:none; */
+  width: 100px;
+  min-height: 50px;
+  background-color: lightgreen;
+  border-radius: 10px;
+}
+
+/* barra chat */
 
 .bot-bar {
   height: 50px;
@@ -138,7 +153,7 @@ a i {
   align-items: center;
 }
 .bot-bar input {
-  width: 95%;
+  width: 90%;
   height: 35px;
 
 }
